[gd_scene load_steps=12 format=2]

[ext_resource path="res://Modelos/Floresta/CasaMadeira/Casa_Madeira_Noite.glb" type="PackedScene" id=1]
[ext_resource path="res://Shaders/psx/shaders-psx1/psx.shader" type="Shader" id=2]
[ext_resource path="res://Texturas/Floresta/Casa_madeira.jpg" type="Texture" id=3]
[ext_resource path="res://Scripts/Floresta/Casa.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/tint_color = Color( 1, 1, 1, 1 )
shader_param/specular_intensity = null
shader_param/vertex_resolution = 256.0
shader_param/cull_distance = 9999.0
shader_param/uv_scale = Vector2( 1, 1 )
shader_param/uv_offset = Vector2( 0, 0 )
shader_param/uv_speed = Vector2( 0, -1 )
shader_param/affine_texture_mapping = false
shader_param/emissive = false
shader_param/moving_uv = false
shader_param/double_sided = false
shader_param/stippled_transparent = false
shader_param/albedoTex = ExtResource( 3 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/tint_color = Color( 1, 1, 1, 1 )
shader_param/specular_intensity = null
shader_param/vertex_resolution = 256.0
shader_param/cull_distance = 9999.0
shader_param/uv_scale = Vector2( 1, 1 )
shader_param/uv_offset = Vector2( 0, 0 )
shader_param/uv_speed = Vector2( 0, -1 )
shader_param/affine_texture_mapping = false
shader_param/emissive = false
shader_param/moving_uv = false
shader_param/double_sided = false
shader_param/stippled_transparent = false
shader_param/albedoTex = ExtResource( 3 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.280432, 0.742065, 0.42967 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1.36612, 1.38966, 1.78396 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade_in"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade_out"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Casa_Madeira_Noite" instance=ExtResource( 1 )]

[node name="Casa" parent="." index="0"]
material/0 = SubResource( 1 )
script = ExtResource( 4 )

[node name="Porta" parent="Casa" index="0"]
material/0 = SubResource( 2 )

[node name="Porta" type="Area" parent="Casa/Porta" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Casa/Porta/Porta" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.20215, -0.225108, 0 )
shape = SubResource( 3 )

[node name="StaticBody" type="StaticBody" parent="Casa" index="1"]

[node name="CollisionShape" type="CollisionShape" parent="Casa/StaticBody" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.369268, 0 )
shape = SubResource( 4 )

[node name="TranformScreen" type="CanvasLayer" parent="Casa" index="2"]

[node name="ColorRect" type="ColorRect" parent="Casa/TranformScreen" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="Fade_anim" type="AnimationPlayer" parent="Casa/TranformScreen" index="1"]
anims/RESET = SubResource( 5 )
anims/fade_in = SubResource( 6 )
anims/fade_out = SubResource( 7 )

[connection signal="animation_finished" from="Casa/TranformScreen/Fade_anim" to="Casa" method="_on_Fade_anim_animation_finished"]
